# python-alsa-midi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.rst  build-wheels.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
alsa_midi/: __init__.py  _ffi.py  _ffi_defs.py  address.py  client.py  event.py  exceptions.py  mido_backend.py  port.py  queue.py  util.py
docs/: Makefile  alsa.tag  api.rst  api_async_client.rst  api_client.rst  api_events.rst  api_exceptions.rst  api_misc.rst  api_port.rst  api_queue.rst  conf.py  index.rst  requirements.txt  usage.rst
examples/: connect.py  dump_bytes.py  dump_events.py  list_clients.py  list_ports.py  list_ports_full.py  play_the_lick.py  play_the_lick_bytes.py
tests/: Vagrantfile  conftest.py  test_address.py  test_client.py  test_compile_no_compile.py  test_event.py  test_event_async_input.py  test_event_async_output.py  test_event_input.py  test_event_output.py  test_port.py  test_port_query.py  test_queue.py  test_realtime.py  test_remove_events.py  test_subs_query.py  test_util.py
tests/data/: c_major.mid  generate.py  test-c-major-scale-fast.mid
