[metadata]
name = alsa-midi
description = Python interface for ALSA MIDI sequencer
keywords = ALSA MIDI sequencer
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 3 - Alpha
    Framework :: AsyncIO
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Topic :: Multimedia :: Sound/Audio :: MIDI
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    GitHub = https://github.com/Jajcus/python-alsa-midi/
    Documentation = https://python-alsa-midi.readthedocs.io/

[options]
packages =
    alsa_midi
zip_safe = False
setup_requires =
    cffi>=1.14.0
install_requires =
    cffi>=1.14.0
    importlib_metadata; python_version == "3.7"
#cffi_modules=
#    "alsa_midi/_ffi_defs.py:ffi"
